Avoid bug where page disappear on iOS 14.4

--- a/src/components/ExchangeRow/style.scss
+++ b/src/components/ExchangeRow/style.scss
@@ -37,6 +37,7 @@
     align-items: center;
     .icon-wrapper {
       display: flex;
+      align-items: center;
       width: 24px;
       margin-right: 2vw;
     }
